# wisdom

./: Cargo.toml  cooking.txt  frakes.txt  germancookbook.txt  input  style.css  warcookbook.txt  wisdom.service
src/: main.rs
static/: index.html  style.css
templates/: index.html  index.html.tera  wisdom.html  wisdom.html.hbs
