[package]
name = "wisdom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
markov = "1.1.0"
lazy_static = "1.4.0"
clap = { version = "3.0.6", features = ["derive"] }
rocket_dyn_templates = {version="0.1.0-rc.1", features= ["tera"] }
